packages/fuel-indexer-tests/tests/snapshots/integration_tests__snapshots__forc_index_build_output.snap
---
source: packages/fuel-indexer-tests/tests/snapshots.rs
expression: output
---
Build an indexer

USAGE:
    forc-index build [OPTIONS]

OPTIONS:
    -d, --debug                  Build artifacts with the debug profile.
    -h, --help                   Print help information
        --locked                 Ensure that the Cargo.lock file is up-to-date.
    -m, --manifest <MANIFEST>    Manifest file name of indexer being built.
        --native                 Building for native execution.
    -p, --path <PATH>            Path to the indexer project.
    -v, --verbose                Enable verbose output.
