packages/fuel-indexer-tests/tests/snapshots/integration_tests__snapshots__forc_index_help_output.snap
---
source: packages/fuel-indexer-tests/tests/snapshots.rs
expression: stdout
---
Fuel Indexer Orchestrator

USAGE:
    forc-index <SUBCOMMAND>

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information

SUBCOMMANDS:
    auth        Authenticate against an indexer service
    build       Build an indexer
    check       Check for Fuel indexer components
    deploy      Deploy an indexer to an indexer service
    help        Print this message or the help of the given subcommand(s)
    kill        Kill the indexer process. Note that this command will kill any process listening
                    on the default indexer port or the port specified by the `--port` flag
    new         Create a new indexer project in a new directory
    postgres    Fuel Postgres Orchestrator
    remove      Stop and remove a running indexer
    start       Standalone binary for the Fuel indexer service
    status      Check the status of a registered indexer

