packages/fuel-indexer-tests/tests/snapshots/integration_tests__snapshots__forc_index_new_output.snap
---
source: packages/fuel-indexer-tests/tests/snapshots.rs
expression: output
---
Create a new indexer project in a new directory

USAGE:
    forc-index new [OPTIONS] <PATH>

ARGS:
    <PATH>    Path at which to create indexer

OPTIONS:
        --absolute-paths           Resolve indexer asset filepaths using absolute paths.
    -h, --help                     Print help information
        --name <NAME>              Name of indexer.
        --namespace <NAMESPACE>    Namespace to which indexer belongs.
        --native                   Initialize an indexer with native execution enabled.
    -v, --verbose                  Enable verbose output.
