packages/fuel-indexer-tests/tests/snapshots/integration_tests__snapshots__forc_index_remove_help_output.snap
---
source: packages/fuel-indexer-tests/tests/snapshots.rs
expression: output
---
Stop and remove a running indexer

USAGE:
    forc-index remove [OPTIONS]

OPTIONS:
        --auth <AUTH>            Authentication header value.
    -h, --help                   Print help information
    -m, --manifest <MANIFEST>    Path to the manifest of the indexer project being removed.
    -p, --path <PATH>            Path to the indexer project.
        --url <URL>              URL at which indexer is deployed. [default: http://127.0.0.1:29987]
    -v, --verbose                Enable verbose output.
